WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150175
Fix the !(ENABLE(SHADOW_DOM) || ENABLE(DETAILS_ELEMENT)) build after
r191112
https://bugs.webkit.org/show_bug.cgi?id=150175
Summary
Fix the !(ENABLE(SHADOW_DOM) || ENABLE(DETAILS_ELEMENT)) build after r191112
Csaba Osztrogonác
Reported
2015-10-15 09:54:26 PDT
http://trac.webkit.org/changeset/191112
broke the build: ../../Source/WebCore/dom/ComposedTreeAncestorIterator.h: In member function 'WebCore::ComposedTreeAncestorIterator& WebCore::ComposedTreeAncestorIterator::traverseParent()': ../../Source/WebCore/dom/ComposedTreeAncestorIterator.h:91:15: error: unused variable 'shadowRoot' [-Werror=unused-variable] ../../Source/WebCore/dom/ComposedTreeIterator.cpp: In member function 'void WebCore::ComposedTreeIterator::initializeShadowStack()': ../../Source/WebCore/dom/ComposedTreeIterator.cpp:51:19: error: unused variable 'shadowRoot' [-Werror=unused-variable] ../../Source/WebCore/dom/Element.cpp: In member function 'virtual void WebCore::Element::childrenChanged(const WebCore::ContainerNode::ChildChange&)': ../../Source/WebCore/dom/Element.cpp:1848:21: error: unused variable 'shadowRoot' [-Werror=unused-variable]
Attachments
Patch
(3.00 KB, patch)
2015-10-15 09:55 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-10-15 09:55:57 PDT
Created
attachment 263165
[details]
Patch
WebKit Commit Bot
Comment 2
2015-10-15 12:47:01 PDT
Comment on
attachment 263165
[details]
Patch Clearing flags on attachment: 263165 Committed
r191127
: <
http://trac.webkit.org/changeset/191127
>
WebKit Commit Bot
Comment 3
2015-10-15 12:47:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug