Fix the !(ENABLE(SHADOW_DOM) || ENABLE(DETAILS_ELEMENT)) build after r191112 https://bugs.webkit.org/show_bug.cgi?id=150175

Reviewed by Antti Koivisto.

* dom/ComposedTreeAncestorIterator.h:
(WebCore::ComposedTreeAncestorIterator::traverseParent):
* dom/ComposedTreeIterator.cpp:
(WebCore::ComposedTreeIterator::initializeShadowStack):
* dom/Element.cpp:
(WebCore::Element::childrenChanged):


Canonical link: https://commits.webkit.org/168313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191127 268f45cc-cd09-0410-ab3c-d52691b4dbfc