Source/WebCore/dom/ComposedTreeAncestorIterator.h
@@ -92,6 +92,7 @@ inline ComposedTreeAncestorIterator& ComposedTreeAncestorIterator::traverseParen
 #if ENABLE(SHADOW_DOM) || ENABLE(DETAILS_ELEMENT)
         m_current = shadowRoot->findAssignedSlot(*m_current);
 #else
+        UNUSED_PARAM(shadowRoot);
         m_current = nullptr;
 #endif
         return *this;
